--- a/src/assets/scss/template/_template.scss
+++ b/src/assets/scss/template/_template.scss
@@ -1,59 +1,461 @@
-// These are the styles to make some of the templates look extra nice.
-// Feel free to remove these styles for production!
-
-// Body Styles 
+html,
 body,
-html, 
 .body {
-  background: #f3f3f3 !important;
+  background: #E4E5EA;
+  background-color: #E4E5EA;
+  padding-bottom: 300px;
 }
 
-.container.header {
-  background: #f3f3f3;
-}
-
-.body-drip {
-  border-top: 8px solid #663399;
-}
-
-// Full Width Headers
 .header {
-  background: #8a8a8a;
+  background: $primary-color;
+  background-color: $primary-color;
+
+  .columns {
+    padding-bottom: 20px;
+    padding-right: 20px !important;
+    padding-left: 20px !important;
+    padding-top: 20px;
+
+    .logoWhite {
+      width: 128px;
+    }
+
+    .userIcon {
+      width: 32px;
+    }
+  }
 }
 
-.header .columns {
-  padding-bottom: 0;
+.subHeader {
+  background: #D65600;
+  background-color: #D65600;
+
+  .columns {
+    padding-bottom: 5px;
+    padding-right: 10px !important;
+    padding-left: 10px !important;
+    padding-top: 5px;
+
+    a {
+      color: #ffffff;
+      font-size: 14px;
+      font-weight: 700;
+
+      .icons {
+        width: 20px;
+        margin-right: 10px;
+        display: inline-block;
+        vertical-align: bottom;
+      }
+    }
+
+    th {
+      text-align: center;
+    }
+
+    .menuDivider {
+      display: block; 
+      height: 20px; 
+      width: 1px; 
+      background: #FF690F; 
+      background-color: #ff690f;
+    }
+  }
 }
 
-.header p {
-  color: #fff;
-  padding-top: 15px;
+.dealOfDay {
+  background: #13191F;
+  background-color: #13191F;
+
+  .columns {
+
+    th {
+      padding-top: 20px;
+      padding-bottom: 20px;
+    }
+  }
+
+  img {
+    padding-bottom: 20px;
+  }
+
+  h2 {
+    color: #ffffff;
+    font-weight: 900;
+    font-size: 30px;
+    text-align: center;
+    padding-bottom: 20px;
+  }
+
+  p {
+    color: #ffffff;
+    font-weight: 600;
+    font-size: 16px;
+    text-align: center;
+    padding-bottom: 10px;
+  }
+
+  span {
+    color: #ffffff;
+    font-weight: 600;
+    font-size: 16px;
+    text-align: center;
+    display: block;
+
+    &.saveAmount {
+      font-size: 14px;
+    }
+
+    &.tinyInfo {
+      font-size: 10px;
+      font-weight: 300;
+      padding-bottom: 10px;
+    }
+
+    &.price {
+      font-size: 20px;
+      font-weight: 600;
+      padding-bottom: 10px;
+    }
+  }
+
+  .button {
+    display: inline-block;
+    width: 150px;
+    text-align: center;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    border: 1px solid #fff;
+    border-radius: 5px; 
+    color: #ffffff;
+
+    &:hover {
+      color: $primary-color;
+    }
+  }
 }
 
-.header .wrapper-inner {
-  padding: 20px;
+.contentArea {
+  background: #F1F4F7;
+  background-color: #F1F4F7;
+
+  & > tbody > tr > th {
+    padding-top: 0;
+  }
+
+  .firstOffer {
+      padding-top: 16px;
+  }
+
+  .offer {
+    background: #ffffff;
+    background-color: #ffffff;
+  
+    .columns {
+  
+      th {
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-right: 20px;
+        padding-left: 20px;
+      }
+
+      & > table {
+        max-width: 568px;
+        table-layout: fixed;
+      }
+    }
+  
+    img {
+      padding-bottom: 20px;
+    }
+  
+    h2 {
+      color: #ffffff;
+      font-weight: 900;
+      font-size: 30px;
+      text-align: center;
+      padding-bottom: 20px;
+    }
+  
+    p {
+      color: #334755;
+      font-weight: 600;
+      font-size: 16px;
+      text-align: center;
+      padding-bottom: 10px;
+    }
+  
+    span {
+      color: #ffffff;
+      font-weight: 600;
+      font-size: 16px;
+      text-align: center;
+      display: block;
+  
+      &.saveAmount {
+        font-size: 14px;
+        color: #1A88F3;
+      }
+  
+      &.tinyInfo {
+        font-size: 10px;
+        font-weight: 500;
+        padding-bottom: 10px;
+        color: #334755;
+      }
+  
+      &.price {
+        font-size: 20px;
+        font-weight: 600;
+        padding-bottom: 10px;
+        color: #334755;
+      }
+    }
+  
+    .button {
+      background: #14181C;
+      background-color: #14181C;
+      display: block;
+      width: 150px;
+      text-align: center;
+      padding-top: 7px;
+      padding-bottom: 7px;
+      border: 1px solid #ffffff;
+      border-radius: 5px; 
+      color: #ffffff;
+      margin: 0 auto;
+  
+      &:hover {
+        color: $primary-color;
+      }
+    }
+
+    &.lastOffer {
+
+      .groupIcons {
+        width: 190px;
+        margin: 0 auto;
+        padding-bottom: 0;
+      }
+
+      h4 {
+        color: #334755;
+        font-weight: 600;
+        font-size: 16px;
+        text-align: center;
+        padding-bottom: 10px;
+      }
+
+      p {
+        color: #334755;
+        font-weight: 400;
+        font-size: 14px;
+        text-align: center;
+        padding-bottom: 10px;
+      }
+    }
+  }
 }
 
-.header .container {
-  background: transparent;
+.footerTop {
+  background: #222D37;
+  background-color: #222D37;
+  color: #ffffff;
+
+  & > tbody > tr {
+    vertical-align: middle;
+  }
+
+  & > tbody > tr > th {
+    padding-top: 30px !important;
+    padding-bottom: 25px !important;
+    padding-left: 30px !important;
+    padding-right: 30px !important;
+  }
+
+  th {
+    padding-bottom: 0px;
+    padding-top: 0px;
+  }
+
+  .circleLogo {
+    display: block;
+    margin: 0 auto;
+  }
+
+  .callToAction {
+    display: block;
+    font-size: 16px;
+    hyphens: none;
+    color: #ffffff;
+    padding-left: 10px;
+  }
+
+  .info {
+    display: block;
+    font-size: 12px;
+    hyphens: none;
+    color: #ffffff;
+    padding-left: 10px;
+  }
+
+  .infoSection > table > tbody > tr > th {
+    padding-left: 10px !important;
+    color: #ffffff !important;
+  }
+
+  .storeLogos {
+
+    img {
+      height: 40px;
+      width: 120px;
+      display: block;
+      margin: 0 auto;
+      padding-top: 5px;
+      padding-bottom: 5px;
+    }
+
+    & > table > tbody > tr > th > table > tbody > tr > th {
+      padding-bottom: 5px;
+    }
+  }
 }
 
-// Social Media
-table.button.facebook table td {
-  background: #3B5998 !important;
-  border-color: #3B5998;
+.footerSocial {
+  background: #14181C;
+  background-color: #14181C;
+
+  & > tbody > tr > th {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  th {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .logoSection {
+
+    img {
+      width: 128px;
+    }
+  }
+
+  .socialIcons {
+
+    img {
+      width: 32px;
+      display: block;
+      margin: 0 auto;
+    }
+  }
 }
 
-table.button.twitter table td {
-  background: #1daced !important;
-  border-color: #1daced;
+.footerMenu {
+  background: #14181C;
+  background-color: #14181C;
+  border-bottom: 1px solid #2D3E4B;
+  border-top: 1px solid #2D3E4B;
+
+  .columns {
+    padding-bottom: 5px;
+    padding-right: 10px !important;
+    padding-left: 10px !important;
+    padding-top: 5px;
+
+    a {
+      color: #ffffff;
+      font-size: 14px;
+      font-weight: 700;
+
+      .icons {
+        width: 20px;
+        margin-right: 10px;
+        display: inline-block;
+        vertical-align: bottom;
+      }
+    }
+
+    th {
+      text-align: center;
+    }
+
+    .menuDivider {
+      display: block; 
+      height: 20px; 
+      width: 1px; 
+      background: #2D3E4B; 
+      background-color: #2D3E4B;
+    }
+  }
 }
 
-table.button.google table td {
-  background: #DB4A39 !important;
-  border-color: #DB4A39;
+.footerBottom {
+  background: #14181C;
+  background-color: #14181C;
+
+  & > tbody > tr > th {
+    padding-left: 30px !important;
+    padding-bottom: 30px !important;
+    padding-right: 30px !important;
+    padding-top: 30px !important;
+  }
+
+  .lowerLinks {
+
+    .link {
+      font-size: 12px !important;
+      color: #ffffff !important;
+      margin-right: 10px;
+
+      &:nth-child(4) {
+        margin-right: 0;
+      }
+
+      &:hover {
+        color: $primary-color;
+      }
+    }
+  }
+
+  .privacy {
+
+    th {
+      padding-bottom: 0;
+    }
+
+    & > tbody > tr > th > table > tbody > tr > th {
+      padding-bottom: 30px;
+    }
+
+    p {
+      color: #A0A1A3;
+      font-size: 10px;
+      padding-bottom: 20px;
+    }
+  }
+
+  .copyright,
+  .address {
+    
+    th {
+      padding-bottom: 0;
+    }
+
+    .columns {
+
+      p {
+        color: #D0D0D1;
+        font-size: 12px;
+        font-weight: 400;
+        padding-bottom: 0px;
+      }
+    }
+  }
 }
 
-.wrapper.secondary {
-  background: #f3f3f3;
+.centerTag {
+  min-width: auto;
 }
