--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,28 +11,28 @@
       <columns style="width: 90%">
         <row>
             <columns small="4" large="3">
-              <a href="#" class="text-center"><img src="{{ root }}/assets/img/kayak_files/airplane.png" class="icons"/>Flights</a>
+              <a href="#" class="text-center"><img src="{{ root }}/assets/img/kayak_files/airplane.png" class="icons"/>Bait</a>
             </columns>
             <columns class="show-for-large" style="width: 1%;">
               <span class="menuDivider">
               </span>
             </columns>
             <columns small="4" large="3">
-              <a href="#" class="text-center"><img src="{{ root }}/assets/img/kayak_files/bed.png" class="icons"/>Hotels</a>
+              <a href="#" class="text-center"><img src="{{ root }}/assets/img/kayak_files/bed.png" class="icons"/>Rods</a>
             </columns>
             <columns class="show-for-large" style="width: 1%;">
               <span class="menuDivider">
               </span>
             </columns>
             <columns small="4" large="3">
-              <a href="#" class="text-center"><img src="{{ root }}/assets/img/kayak_files/car.png" class="icons"/>Cars</a>
+              <a href="#" class="text-center"><img src="{{ root }}/assets/img/kayak_files/car.png" class="icons"/>Reels</a>
             </columns>
             <columns class="show-for-large" style="width: 1%;">
               <span class="menuDivider">
               </span>
             </columns>
             <columns small="4" large="3" class="show-for-large">
-              <a href="#" class="text-center"><img src="{{ root }}/assets/img/kayak_files/umbrella.png" class="icons"/>Packages</a>
+              <a href="#" class="text-center"><img src="{{ root }}/assets/img/kayak_files/umbrella.png" class="icons"/>Tackle</a>
             </columns>
         </row>
       </columns>
