--- a/src/assets/scss/template/_template.scss
+++ b/src/assets/scss/template/_template.scss
@@ -17,7 +17,8 @@ body,
     padding-top: 20px;
 
     .logoWhite {
-      width: 128px;
+      width: 100px;
+      height: 80px;
     }
 
     .userIcon {
@@ -76,6 +77,8 @@ body,
   }
 
   img {
+    height: 355px;
+    width: 690px;
     padding-bottom: 20px;
   }
 
@@ -167,6 +170,8 @@ body,
     }
   
     img {
+      height: 355px;
+      width: 690px;
       padding-bottom: 20px;
     }
   
