--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <container>
     <row class="header">
       <columns small="6" large="6" valign="middle">
-        <img src="{{ root }}/assets/img/kayak_files/logo_white.png" class="logoWhite"/>
+        <img src="{{ root }}/assets/img/baitshop_files/TheBaitShopLogo.jpg" class="logoWhite"/>
       </columns>
       <columns small="6" large="6" valign="middle">
         <img src="{{ root }}/assets/img/kayak_files/user.png" class="userIcon float-right"/>
@@ -32,7 +32,7 @@
               </span>
             </columns>
             <columns small="4" large="3" class="show-for-large">
-              <a href="#" class="text-center"><img src="{{ root }}/assets/img/baitshop_files/tackle.png" class="icons"/>Tackle</a>
+              <a href="#" class="text-center"><img src="{{ root }}/assets/img/baitshop_files/bait.png" class="icons"/>Tackle</a>
             </columns>
         </row>
       </columns>
