Changes / Fixes to Content & Footer

--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -16,7 +16,7 @@
 // 1. Global
 // ---------
 
-$primary-color: #FF690F;
+$primary-color: #2b7cff;
 $secondary-color: #777777;
 $success-color: #3adb76;
 $warning-color: #ffae00;
