--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,30 +1,4 @@
 <container>
-    <row class="footerTop">
-        <columns small="6" large="5">
-            <row>
-                <columns small="3" large="2">
-                    <img src="{{root}}assets/img/kayak_files/logo_circle.png" class="circleLogo">
-                </columns>
-                <columns small="9" large="9" class="infoSection" valign="middle">
-                    <span class="callToAction">Download the app</span>
-                    <span class="info">Cheap flights, hotels & more</span>
-                </columns>
-            </row>
-        </columns>
-        <columns small="6" large="7" class="storeLogos">
-            <row>
-                <columns large="6" valign="middle">
-                    <img src="{{root}}assets/img/kayak_files/appstore.png">
-                </columns>
-                <columns large="6" valign="middle">
-                    <img src="{{root}}assets/img/kayak_files/playstore.png">
-                </columns>
-            </row>
-        </columns>
-    </row>
-</container>
-
-<container>
     <row class="footerSocial">
         <columns class="logoSection" small="6" large="9" valign="middle">
             <img src="{{root}}assets/img/kayak_files/logo_orange.png">
@@ -50,28 +24,28 @@
         <columns style="width: 90%">
           <row>
               <columns small="4" large="3">
-                <a href="#" class="text-center"><img src="{{ root }}/assets/img/kayak_files/airplane.png" class="icons"/>Flights</a>
+                <a href="#" class="text-center"><img src="{{ root }}/assets/img/baitshop_files/bait.png" class="icons"/>Bait</a>
               </columns>
               <columns class="show-for-large" style="width: 1%;">
                 <span class="menuDivider">
                 </span>
               </columns>
               <columns small="4" large="3">
-                <a href="#" class="text-center"><img src="{{ root }}/assets/img/kayak_files/bed.png" class="icons"/>Hotels</a>
+                <a href="#" class="text-center"><img src="{{ root }}/assets/img/baitshop_files/rods.png" class="icons"/>Rods</a>
               </columns>
               <columns class="show-for-large" style="width: 1%;">
                 <span class="menuDivider">
                 </span>
               </columns>
               <columns small="4" large="3">
-                <a href="#" class="text-center"><img src="{{ root }}/assets/img/kayak_files/car.png" class="icons"/>Cars</a>
+                <a href="#" class="text-center"><img src="{{ root }}/assets/img/baitshop_files/reels.png" class="icons"/>Reels</a>
               </columns>
               <columns class="show-for-large" style="width: 1%;">
                 <span class="menuDivider">
                 </span>
               </columns>
               <columns small="4" large="3" class="show-for-large">
-                <a href="#" class="text-center"><img src="{{ root }}/assets/img/kayak_files/umbrella.png" class="icons"/>Packages</a>
+                <a href="#" class="text-center"><img src="{{ root }}/assets/img/baitshop_files/tackle.png" class="icons"/>Tackle</a>
               </columns>
           </row>
         </columns>
