--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -74,12 +74,12 @@
             </row>
             <row class="copyright">
                 <columns>
-                    <p>&#9400; 2019 KAYAK Software Corporation</p>
+                    <p>&#9400; 2019 THE BAIT SHOP GOLD COAST</p>
                 </columns>
             </row>
             <row class="address">
                 <columns>
-                    <p>7 Market Street Stamford, CT 06902-5810 US</p>
+                    <p>21/316 Brisbane Rd, Arundel QLD 4216</p>
                 </columns>
                 </row>
         </columns>
